delete-cartItem problem fixed

--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -297,6 +297,10 @@
     </div>
 </div>
 
+<!-- Image input for user pages -->
+<script src="/admin/js/userCreate.js"></script>
+<script src="/admin/js/userUpdate.js"></script>
+
 <!-- Image input for slider pages -->
 <script src="/admin/js/sliderCreate.js"></script>
 <script src="/admin/js/sliderUpdate.js"></script>
