--- a/src/main/resources/templates/admin/category/update.html
+++ b/src/main/resources/templates/admin/category/update.html
@@ -76,7 +76,7 @@
         </div>
 
         <!-- Saxla düyməsi -->
-        <div style="margin: 10px 0; margin-top: 40px; margin-right: 40px; text-align: center;">
+        <div style="margin: 10px 0; margin-top: 40px;">
             <input type="submit" value="Saxla" class="btn btn-primary py-2 px-4"
                    style="color: #3D464D; background-color: #FFD333; border-color: #FFD333;"
                    onmouseover="this.style.backgroundColor='#FFC107'; this.style.borderColor='#FFC107';"
