--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -22,15 +22,15 @@
                 <p style="color: #3D464D; margin-top: 10px;">Zəhmət olmasa e-mail və şifrəni daxil edin!</p>
 
                 <!-- Email Input -->
-                <div style="margin-top: 20px; display: flex; justify-content: center;">
+                <div style="margin-top: 20px; display: flex; justify-content: center; width: 100%;">
                     <input type="email" name="username" placeholder="E-mail" required
-                           style="width: 405px; height: 40px; padding-left: 10px; outline: none;
+                           style="width: 100%; height: 40px; padding-left: 10px; outline: none;
                                    box-shadow: none; border: 1px solid #ccc; border-radius: 5px;"/>
                 </div>
                 <!-- Şifrə Input -->
-                <div style="margin-top: 20px; display: flex; justify-content: center;">
+                <div style="margin-top: 20px; display: flex; justify-content: center; width: 100%;">
                     <input type="password" name="password" placeholder="Şifrə" required
-                           style="width: 405px; height: 40px; padding-left: 10px; outline: none;
+                           style="width: 100%; height: 40px; padding-left: 10px; outline: none;
                                    box-shadow: none; border: 1px solid #ccc; border-radius: 5px;"/>
                 </div>
                 <!-- Submit Button -->
