fixed some issues

--- a/src/main/resources/templates/admin/product/create.html
+++ b/src/main/resources/templates/admin/product/create.html
@@ -23,7 +23,7 @@
                        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
                 <div style="margin: 10px 0;">
-                    <input type="number" name="price" placeholder="Qiymət" required
+                    <input type="number" name="price" placeholder="Qiymət" step="0.01" required
                            style="width: 400px; height: 40px; padding: 10px; outline: none;
                        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
@@ -38,7 +38,7 @@
                        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
                 <div style="margin: 10px 0;">
-                    <input type="number" name="discountPrice" placeholder="Endirim qiyməti" required
+                    <input type="number" name="discountPrice" placeholder="Endirim qiyməti" step="0.01" required
                            style="width: 400px; height: 40px; padding: 10px; outline: none;
                        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
@@ -64,7 +64,7 @@
                 </div>
                 <div style="margin: 10px 0;">
                     <label for="brand" style="display: block; margin-bottom: 2px; font-size: 16px;">Brend:</label>
-                    <select name="brand" id="brand" required
+                    <select name="brand" id="brand"
                             style="width: 320px; height: 40px; padding: 5px 10px; font-size: 15px; color: #3D464D;
                             border: 1px solid #ccc; border-radius: 5px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
                             transition: border-color 0.3s ease, box-shadow 0.3s ease; outline: none; cursor: pointer;">
